lcb: Fixed tests